--- a/static/style.css
+++ b/static/style.css
@@ -249,6 +249,9 @@ body {
     background-image: linear-gradient(to right, #eb3941, #f15e64, #e14e53, #e2373f);
     box-shadow: 0 5px 15px rgba(242, 97, 103, .4);
 }
+.watchlist-btn-login{
+    color: #8d1616;
+}
 
 .completed-username{
     color: #ffffff;
